# initup

./: LICENSE  README.md  meson.build
include/: mountentry.h  routines.h  utils.h
initup-gen/include/: cpio.h
initup-gen/src/: cpio.c  initup-gen.c
initup-serviced/include/: linked_list.h  service.h
initup-serviced/src/: initup-serviced.c  linked_list.c  service.c
src/: initup-init.c  mountentry.c  routines.c  utils.c
